# agent-eval-harness

./: .gitattributes  .gitignore  .releaserc.json  .skillsaw.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  eval.yaml  mkdocs.yml  pyproject.toml
.beads/: issues.jsonl
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: docs.yml  lint-review.yml  lint.yml  release.yml  tests.yml
.specify/: extensions.yml  feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
agent_eval/: __init__.py  _bootstrap.py  anova_runner.py  archive.py  ci_context.py  composite.py  config.py  events.py  hooks.py  matrix.py  reorganize.py
brainstorm/: 00-overview.md
deploy/: Containerfile  README.md
docs/: authoring-interactive-diagrams.md  eval-train-harbor-nemo-skyrl.md  eval-train-openshift-architecture.d2  harbor-workflow.md  opaque-cli-runner-contract.md
examples/: README.md  openshift-agentic-docs.md
scripts/: ensure_deps.py
tests/: conftest.py  demo_responses_api.py  test_anova.py  test_anova_report.py  test_anova_runner.py  test_archive.py  test_bootstrap.py  test_ci_context.py  test_cli_runner.py  test_composite.py  test_config.py  test_discovery.py  test_documentation_tracking.py  test_events.py  test_get_anthropic_client.py  test_harbor_adapter.py  test_harbor_exec_retry.py  test_harbor_k8s_resources.py  test_harbor_k8s_runner.py  test_harbor_results.py  test_harbor_results_parser.py  test_harbor_reward.py  test_harbor_run.py  test_harbor_task_generation.py  test_harbor_upload.py  test_hook_outputs.py  test_hook_pipeline.py  test_hooks.py  test_input_files.py  test_judge_registry.py  test_llm_rubric_scoring.py  test_matrix.py  test_matrix_integration.py  test_openai_compatible.py  test_opencode_runner.py  test_orchestrate.py  test_otel_receiver.py  test_path_validation.py  test_per_model_cost.py  test_permissions_compile.py  (+14 more)
website/: index.md  requirements.txt
(+278 files in other folders)
