[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-eval-harness"
version = "1.20.0"
description = "Agent and skill evaluation harness"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    # Verify TLS against the OS trust store (see agent_eval/_bootstrap.py) so the
    # harness reaches internal-CA endpoints (e.g. a Red Hat-issued MLflow server)
    # without REQUESTS_CA_BUNDLE. Pure-Python, requires-python>=3.11 covers it.
    "truststore>=0.9,<1.0",
]

[project.optional-dependencies]
mlflow = ["mlflow[genai]>=3.5"]
anthropic = ["anthropic[vertex]>=0.40"]
evalhub = [
    "eval-hub-sdk[adapter]>=0.1,<1.0",
    "boto3>=1.34,<2.0",
]
# Harbor containerized execution — install harbor in the same venv so the
# Kubernetes environment plugin and k8s_resources.py share one kubernetes client.
# Requires Python >=3.12 (harbor's minimum).
harbor = [
    "harbor>=0.13.0; python_version >= '3.12'",
    "kubernetes>=29.0,<37.0; python_version >= '3.12'",
]
openai = ["openai>=1.70"]
anova = [
    "scipy>=1.17",
    "statsmodels>=0.14",
    "pandas>=2.2,<3.0",
    "pingouin>=0.6",
]
all = [
    "mlflow[genai]>=3.5",
    "anthropic[vertex]>=0.40",
    "eval-hub-sdk[adapter]>=0.1,<1.0",
    "boto3>=1.34,<2.0",
    "harbor>=0.13.0; python_version >= '3.12'",
    "kubernetes>=29.0,<37.0; python_version >= '3.12'",
    "openai>=1.70",
    "scipy>=1.17",
    "statsmodels>=0.14",
    "pandas>=2.2,<3.0",
    "pingouin>=0.6",
]
test = ["pytest>=8.0"]

[project.scripts]
claude-trace = "agent_eval.cli.trace_run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not e2e'"
markers = ["e2e: end-to-end tests requiring Claude API (deselected by default)"]

[tool.setuptools.packages.find]
include = ["agent_eval*"]
